<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24dp"/>

        <Button android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_speed"
        android:textSize="24dp"/>

    <TextView android:id="@+id/txt_car_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_speed_unit"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotating_speed"
        android:textSize="24dp"/>

    <TextView android:id="@+id/txt_rotating_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotating_speed_unit"
        android:textSize="24dp"/>

    <Button android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"/>

</LinearLayout>