<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="obd" type="com.example.justinchou.cheyilian.model.Obd"/>
    </data>

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obd_device"
                android:layout_weight="1"/>

            <TextView android:id="@+id/txt_connection_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:layout_weight="1"
                android:gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_on"
                android:layout_weight="1"/>

            <Switch android:id="@+id/sw_device_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_off"
                android:layout_weight="1"/>

            <Switch android:id="@+id/sw_device_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_control"
                android:layout_weight="1"/>

            <Switch android:id="@+id/sw_auto_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <CheckBox android:id="@+id/cb_rotating_speed_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotating_speed_control"/>

            <EditText android:id="@+id/et_rotating_speed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@{obd.rotatingSpeed}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotating_speed_unit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_open"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox android:id="@+id/cb_car_speed_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_speed_control"/>

            <EditText android:id="@+id/et_car_speed"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@{obd.carSpeed}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_unit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_open"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox android:id="@+id/cb_throttling_valve_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/throttling_valve_control"/>

            <EditText android:id="@+id/et_throttling_valve"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@{obd.throttlingValue}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_unit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_open"/>

        </LinearLayout>

    </LinearLayout>

</layout>