<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/c2">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:src="@drawable/logo"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginLeft="120dp"
        android:src="@drawable/name"/>

    <EditText android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:scrollbarStyle="insideOverlay"
        android:hint="@string/enter_phone_number"
        android:textColorHint="#999" />

    <EditText android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textColorHint="#999"/>

    <Button android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="20dp"
        android:background="@color/c1"
        android:textStyle="bold" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView android:id="@+id/txt_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="#ccc"
            android:textSize="15dp"/>

        <TextView android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/register_account"
            android:textColor="#0090ff"
            android:textSize="15dp" />

    </RelativeLayout>

</LinearLayout>